# MLIR

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
include/: utils.hpp
src/: CMakeLists.txt  main.c  main.cpp  squeezenet.py  upgrader.py  utils.cpp
